syntax = "proto3";
package leo.gox.databasex.pagex;
option go_package = "github.com/go-leo/gox/databasex/pagex;pagex";

import "google/protobuf/timestamp.proto";

message PageProto {
  // pageNum 页码，从1开始
  uint64 page_num = 1;
  // pageSize 页面大小
  uint64 page_size = 2;
  // offset 跳过的行数
  uint64 offset = 3;
  // limit 限制行数
  uint64 limit = 4;
  // total 总行数
  uint64 total = 5;
  // pages 总页数
  uint64 pages = 6;
  // count 包含count查询
  bool count = 7;
  // countColumn 进行count查询的列名
  string count_column = 8;
  // orderBy 排序,
  string order_by = 9;
  // startTime 开始时间
  google.protobuf.Timestamp start_time = 10;
  // endTime 结束时间
  google.protobuf.Timestamp end_time = 11;
}


